myInterpParser.java
// $ANTLR 3.5.2 myInterp.g 2022-05-08 02:52:00

    import java.util.HashMap;
    import java.util.Scanner;
    import java.util.Iterator;
    import java.util.LinkedHashMap;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings("all")
public class myInterpParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADD", "AND", "ASSIGHNMENT", "CHAR", 
		"COLON", "COMMA", "COMMENT1", "COMMENT2", "Char", "DEC_NUM", "DIGIT", 
		"DIV", "ELSE", "EQ_OP", "ESC_SEQ", "FLOAT", "FLOAT_NUM", "FLOAT_NUM1", 
		"FLOAT_NUM2", "FOR", "GE_OP", "GR_OP", "IF", "INT", "Identifier", "LEFT_BRACE", 
		"LEFT_BRACKET", "LEFT_PARRENTHESE", "LETTER", "LE_OP", "LS_OP", "MAIN", 
		"MM_OP", "MOD", "MUL_POINTER", "NE_OP", "OR", "PP_OP", "PRINTF", "QUESTION_MARK", 
		"RETURN", "RIGHT_BRACE", "RIGHT_BRACKET", "RIGHT_PARRENTHESE", "SCANF", 
		"SEMICOLON", "STRING", "SUB", "VOID", "WHILE", "WS", "'&'"
	};
	public static final int EOF=-1;
	public static final int T__55=55;
	public static final int ADD=4;
	public static final int AND=5;
	public static final int ASSIGHNMENT=6;
	public static final int CHAR=7;
	public static final int COLON=8;
	public static final int COMMA=9;
	public static final int COMMENT1=10;
	public static final int COMMENT2=11;
	public static final int Char=12;
	public static final int DEC_NUM=13;
	public static final int DIGIT=14;
	public static final int DIV=15;
	public static final int ELSE=16;
	public static final int EQ_OP=17;
	public static final int ESC_SEQ=18;
	public static final int FLOAT=19;
	public static final int FLOAT_NUM=20;
	public static final int FLOAT_NUM1=21;
	public static final int FLOAT_NUM2=22;
	public static final int FOR=23;
	public static final int GE_OP=24;
	public static final int GR_OP=25;
	public static final int IF=26;
	public static final int INT=27;
	public static final int Identifier=28;
	public static final int LEFT_BRACE=29;
	public static final int LEFT_BRACKET=30;
	public static final int LEFT_PARRENTHESE=31;
	public static final int LETTER=32;
	public static final int LE_OP=33;
	public static final int LS_OP=34;
	public static final int MAIN=35;
	public static final int MM_OP=36;
	public static final int MOD=37;
	public static final int MUL_POINTER=38;
	public static final int NE_OP=39;
	public static final int OR=40;
	public static final int PP_OP=41;
	public static final int PRINTF=42;
	public static final int QUESTION_MARK=43;
	public static final int RETURN=44;
	public static final int RIGHT_BRACE=45;
	public static final int RIGHT_BRACKET=46;
	public static final int RIGHT_PARRENTHESE=47;
	public static final int SCANF=48;
	public static final int SEMICOLON=49;
	public static final int STRING=50;
	public static final int SUB=51;
	public static final int VOID=52;
	public static final int WHILE=53;
	public static final int WS=54;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public myInterpParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public myInterpParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return myInterpParser.tokenNames; }
	@Override public String getGrammarFileName() { return "myInterp.g"; }


	    //boolean TRACEON = true;
	    //HashMap memory = new HashMap();
	    Map<String, Integer> memory = new LinkedHashMap<>();
	    int[] memorySize = new int[1000];
	   
	   
	   



	// $ANTLR start "program"
	// myInterp.g:24:1: program : ( VOID | INT ) MAIN '(' ')' '{' statements[1,0] ( RETURN ( logic_arith_expression[0] )? ';' )? '}' ;
	public final void program() throws RecognitionException {
		try {
			// myInterp.g:24:8: ( ( VOID | INT ) MAIN '(' ')' '{' statements[1,0] ( RETURN ( logic_arith_expression[0] )? ';' )? '}' )
			// myInterp.g:24:9: ( VOID | INT ) MAIN '(' ')' '{' statements[1,0] ( RETURN ( logic_arith_expression[0] )? ';' )? '}'
			{
			if ( input.LA(1)==INT||input.LA(1)==VOID ) {
				input.consume();
				state.errorRecovery=false;
				state.failed=false;
			}
			else {
				if (state.backtracking>0) {state.failed=true; return;}
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			match(input,MAIN,FOLLOW_MAIN_in_program41); if (state.failed) return;
			match(input,LEFT_PARRENTHESE,FOLLOW_LEFT_PARRENTHESE_in_program43); if (state.failed) return;
			match(input,RIGHT_PARRENTHESE,FOLLOW_RIGHT_PARRENTHESE_in_program45); if (state.failed) return;
			match(input,LEFT_BRACE,FOLLOW_LEFT_BRACE_in_program47); if (state.failed) return;
			pushFollow(FOLLOW_statements_in_program50);
			statements(1, 0);
			state._fsp--;
			if (state.failed) return;
			// myInterp.g:24:54: ( RETURN ( logic_arith_expression[0] )? ';' )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==RETURN) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// myInterp.g:24:55: RETURN ( logic_arith_expression[0] )? ';'
					{
					match(input,RETURN,FOLLOW_RETURN_in_program54); if (state.failed) return;
					// myInterp.g:24:62: ( logic_arith_expression[0] )?
					int alt1=2;
					int LA1_0 = input.LA(1);
					if ( ((LA1_0 >= Char && LA1_0 <= DEC_NUM)||LA1_0==FLOAT_NUM||LA1_0==Identifier||LA1_0==LEFT_PARRENTHESE||LA1_0==SUB) ) {
						alt1=1;
					}
					switch (alt1) {
						case 1 :
							// myInterp.g:24:63: logic_arith_expression[0]
							{
							pushFollow(FOLLOW_logic_arith_expression_in_program57);
							logic_arith_expression(0);
							state._fsp--;
							if (state.failed) return;
							}
							break;

					}

					match(input,SEMICOLON,FOLLOW_SEMICOLON_in_program64); if (state.failed) return;
					}
					break;

			}

			match(input,RIGHT_BRACE,FOLLOW_RIGHT_BRACE_in_program68); if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "program"



	// $ANTLR start "declaration"
	// myInterp.g:27:1: declaration[int scope] : ( type Identifier ';' | type Identifier '=' logic_arith_expression[$scope] ';' );
	public final void declaration(int scope) throws RecognitionException {
		Token Identifier1=null;
		Token Identifier2=null;
		ParserRuleReturnScope logic_arith_expression3 =null;

		try {
			// myInterp.g:27:23: ( type Identifier ';' | type Identifier '=' logic_arith_expression[$scope] ';' )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==CHAR||LA3_0==FLOAT||LA3_0==INT) ) {
				int LA3_1 = input.LA(2);
				if ( (LA3_1==Identifier) ) {
					int LA3_2 = input.LA(3);
					if ( (LA3_2==SEMICOLON) ) {
						alt3=1;
					}
					else if ( (LA3_2==ASSIGHNMENT) ) {
						alt3=2;
					}

					else {
						if (state.backtracking>0) {state.failed=true; return;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 3, 2, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					if (state.backtracking>0) {state.failed=true; return;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 3, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// myInterp.g:27:24: type Identifier ';'
					{
					pushFollow(FOLLOW_type_in_declaration77);
					type();
					state._fsp--;
					if (state.failed) return;
					Identifier1=(Token)match(input,Identifier,FOLLOW_Identifier_in_declaration79); if (state.failed) return;
					match(input,SEMICOLON,FOLLOW_SEMICOLON_in_declaration81); if (state.failed) return;
					if ( state.backtracking==0 ) { 
							String str = (Identifier1!=null?Identifier1.getText():null)+Integer.toString(scope);
							memory.put(str,0);
							memorySize[scope] = memorySize[scope]+1;
							
							
						   }
					}
					break;
				case 2 :
					// myInterp.g:34:13: type Identifier '=' logic_arith_expression[$scope] ';'
					{
					pushFollow(FOLLOW_type_in_declaration96);
					type();
					state._fsp--;
					if (state.failed) return;
					Identifier2=(Token)match(input,Identifier,FOLLOW_Identifier_in_declaration98); if (state.failed) return;
					match(input,ASSIGHNMENT,FOLLOW_ASSIGHNMENT_in_declaration100); if (state.failed) return;
					pushFollow(FOLLOW_logic_arith_expression_in_declaration102);
					logic_arith_expression3=logic_arith_expression(scope);
					state._fsp--;
					if (state.failed) return;
					match(input,SEMICOLON,FOLLOW_SEMICOLON_in_declaration106); if (state.failed) return;
					if ( state.backtracking==0 ) {
					           	    String str = (Identifier2!=null?Identifier2.getText():null)+Integer.toString(scope);
						            memory.put(str,new Integer((logic_arith_expression3!=null?((myInterpParser.logic_arith_expression_return)logic_arith_expression3).value:0)));
						            memorySize[scope] = memorySize[scope]+1;
						            
					            }
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "declaration"



	// $ANTLR start "type"
	// myInterp.g:42:1: type : ( INT | FLOAT | CHAR );
	public final void type() throws RecognitionException {
		try {
			// myInterp.g:42:5: ( INT | FLOAT | CHAR )
			// myInterp.g:
			{
			if ( input.LA(1)==CHAR||input.LA(1)==FLOAT||input.LA(1)==INT ) {
				input.consume();
				state.errorRecovery=false;
				state.failed=false;
			}
			else {
				if (state.backtracking>0) {state.failed=true; return;}
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "type"



	// $ANTLR start "statements"
	// myInterp.g:46:1: statements[int flag,int scope] : ( statement[$flag,$scope] statements[$flag,$scope] |);
	public final void statements(int flag, int scope) throws RecognitionException {
		try {
			// myInterp.g:46:32: ( statement[$flag,$scope] statements[$flag,$scope] |)
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==CHAR||(LA4_0 >= COMMENT1 && LA4_0 <= DEC_NUM)||(LA4_0 >= FLOAT && LA4_0 <= FLOAT_NUM)||(LA4_0 >= IF && LA4_0 <= Identifier)||LA4_0==LEFT_PARRENTHESE||LA4_0==PRINTF||(LA4_0 >= SCANF && LA4_0 <= SEMICOLON)||LA4_0==SUB||LA4_0==WHILE) ) {
				alt4=1;
			}
			else if ( ((LA4_0 >= RETURN && LA4_0 <= RIGHT_BRACE)) ) {
				alt4=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// myInterp.g:46:33: statement[$flag,$scope] statements[$flag,$scope]
					{
					pushFollow(FOLLOW_statement_in_statements148);
					statement(flag, scope);
					state._fsp--;
					if (state.failed) return;
					pushFollow(FOLLOW_statements_in_statements151);
					statements(flag, scope);
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					// myInterp.g:47:10: 
					{
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "statements"


	public static class logic_arith_expression_return extends ParserRuleReturnScope {
		public int value;
	};


	// $ANTLR start "logic_arith_expression"
	// myInterp.g:49:1: logic_arith_expression[int scope] returns [int value] : a= arith_expression[$scope] ( GR_OP b= arith_expression[$scope] | LS_OP c= arith_expression[$scope] | EQ_OP d= arith_expression[$scope] | LE_OP e= arith_expression[$scope] | GE_OP f= arith_expression[$scope] | NE_OP g= arith_expression[$scope] | AND h= arith_expression[$scope] | OR i= arith_expression[$scope] )* ;
	public final myInterpParser.logic_arith_expression_return logic_arith_expression(int scope) throws RecognitionException {
		myInterpParser.logic_arith_expression_return retval = new myInterpParser.logic_arith_expression_return();
		retval.start = input.LT(1);

		int a =0;
		int b =0;
		int c =0;
		int d =0;
		int e =0;
		int f =0;
		int g =0;
		int h =0;
		int i =0;

		try {
			// myInterp.g:50:5: (a= arith_expression[$scope] ( GR_OP b= arith_expression[$scope] | LS_OP c= arith_expression[$scope] | EQ_OP d= arith_expression[$scope] | LE_OP e= arith_expression[$scope] | GE_OP f= arith_expression[$scope] | NE_OP g= arith_expression[$scope] | AND h= arith_expression[$scope] | OR i= arith_expression[$scope] )* )
			// myInterp.g:50:7: a= arith_expression[$scope] ( GR_OP b= arith_expression[$scope] | LS_OP c= arith_expression[$scope] | EQ_OP d= arith_expression[$scope] | LE_OP e= arith_expression[$scope] | GE_OP f= arith_expression[$scope] | NE_OP g= arith_expression[$scope] | AND h= arith_expression[$scope] | OR i= arith_expression[$scope] )*
			{
			pushFollow(FOLLOW_arith_expression_in_logic_arith_expression183);
			a=arith_expression(scope);
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) {retval.value = a;}
			// myInterp.g:51:19: ( GR_OP b= arith_expression[$scope] | LS_OP c= arith_expression[$scope] | EQ_OP d= arith_expression[$scope] | LE_OP e= arith_expression[$scope] | GE_OP f= arith_expression[$scope] | NE_OP g= arith_expression[$scope] | AND h= arith_expression[$scope] | OR i= arith_expression[$scope] )*
			loop5:
			while (true) {
				int alt5=9;
				switch ( input.LA(1) ) {
				case GR_OP:
					{
					alt5=1;
					}
					break;
				case LS_OP:
					{
					alt5=2;
					}
					break;
				case EQ_OP:
					{
					alt5=3;
					}
					break;
				case LE_OP:
					{
					alt5=4;
					}
					break;
				case GE_OP:
					{
					alt5=5;
					}
					break;
				case NE_OP:
					{
					alt5=6;
					}
					break;
				case AND:
					{
					alt5=7;
					}
					break;
				case OR:
					{
					alt5=8;
					}
					break;
				}
				switch (alt5) {
				case 1 :
					// myInterp.g:51:21: GR_OP b= arith_expression[$scope]
					{
					match(input,GR_OP,FOLLOW_GR_OP_in_logic_arith_expression215); if (state.failed) return retval;
					pushFollow(FOLLOW_arith_expression_in_logic_arith_expression221);
					b=arith_expression(scope);
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) {retval.value = (retval.value>b) ? 1 : 0;}
					}
					break;
				case 2 :
					// myInterp.g:52:6: LS_OP c= arith_expression[$scope]
					{
					match(input,LS_OP,FOLLOW_LS_OP_in_logic_arith_expression232); if (state.failed) return retval;
					pushFollow(FOLLOW_arith_expression_in_logic_arith_expression238);
					c=arith_expression(scope);
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) {retval.value = (retval.value<c) ? 1 : 0;}
					}
					break;
				case 3 :
					// myInterp.g:53:6: EQ_OP d= arith_expression[$scope]
					{
					match(input,EQ_OP,FOLLOW_EQ_OP_in_logic_arith_expression250); if (state.failed) return retval;
					pushFollow(FOLLOW_arith_expression_in_logic_arith_expression256);
					d=arith_expression(scope);
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) {retval.value = (retval.value==d) ? 1 : 0;}
					}
					break;
				case 4 :
					// myInterp.g:54:6: LE_OP e= arith_expression[$scope]
					{
					match(input,LE_OP,FOLLOW_LE_OP_in_logic_arith_expression268); if (state.failed) return retval;
					pushFollow(FOLLOW_arith_expression_in_logic_arith_expression274);
					e=arith_expression(scope);
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) {retval.value = (retval.value<=e) ? 1 : 0;}
					}
					break;
				case 5 :
					// myInterp.g:55:6: GE_OP f= arith_expression[$scope]
					{
					match(input,GE_OP,FOLLOW_GE_OP_in_logic_arith_expression286); if (state.failed) return retval;
					pushFollow(FOLLOW_arith_expression_in_logic_arith_expression292);
					f=arith_expression(scope);
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) {retval.value = (retval.value>=f) ? 1 : 0;}
					}
					break;
				case 6 :
					// myInterp.g:56:6: NE_OP g= arith_expression[$scope]
					{
					match(input,NE_OP,FOLLOW_NE_OP_in_logic_arith_expression304); if (state.failed) return retval;
					pushFollow(FOLLOW_arith_expression_in_logic_arith_expression310);
					g=arith_expression(scope);
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) {retval.value = (retval.value!=g) ? 1 : 0;}
					}
					break;
				case 7 :
					// myInterp.g:57:6: AND h= arith_expression[$scope]
					{
					match(input,AND,FOLLOW_AND_in_logic_arith_expression322); if (state.failed) return retval;
					pushFollow(FOLLOW_arith_expression_in_logic_arith_expression329);
					h=arith_expression(scope);
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) {retval.value = ((retval.value!=1)||(h !=1) )? 0 : 1;}
					}
					break;
				case 8 :
					// myInterp.g:58:6: OR i= arith_expression[$scope]
					{
					match(input,OR,FOLLOW_OR_in_logic_arith_expression342); if (state.failed) return retval;
					pushFollow(FOLLOW_arith_expression_in_logic_arith_expression349);
					i=arith_expression(scope);
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) {retval.value = ((retval.value ==1)|| (i ==1 ) )? 1 : 0;}
					}
					break;

				default :
					break loop5;
				}
			}

			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "logic_arith_expression"



	// $ANTLR start "arith_expression"
	// myInterp.g:62:1: arith_expression[int scope] returns [int value] : a= multExpr[$scope] ( ADD b= multExpr[$scope] | SUB c= multExpr[$scope] )* ;
	public final int arith_expression(int scope) throws RecognitionException {
		int value = 0;


		int a =0;
		int b =0;
		int c =0;

		try {
			// myInterp.g:62:48: (a= multExpr[$scope] ( ADD b= multExpr[$scope] | SUB c= multExpr[$scope] )* )
			// myInterp.g:63:4: a= multExpr[$scope] ( ADD b= multExpr[$scope] | SUB c= multExpr[$scope] )*
			{
			pushFollow(FOLLOW_multExpr_in_arith_expression408);
			a=multExpr(scope);
			state._fsp--;
			if (state.failed) return value;
			if ( state.backtracking==0 ) {value = a;}
			// myInterp.g:64:18: ( ADD b= multExpr[$scope] | SUB c= multExpr[$scope] )*
			loop6:
			while (true) {
				int alt6=3;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==ADD) ) {
					alt6=1;
				}
				else if ( (LA6_0==SUB) ) {
					alt6=2;
				}

				switch (alt6) {
				case 1 :
					// myInterp.g:64:20: ADD b= multExpr[$scope]
					{
					match(input,ADD,FOLLOW_ADD_in_arith_expression432); if (state.failed) return value;
					pushFollow(FOLLOW_multExpr_in_arith_expression438);
					b=multExpr(scope);
					state._fsp--;
					if (state.failed) return value;
					if ( state.backtracking==0 ) {value = value+b;}
					}
					break;
				case 2 :
					// myInterp.g:65:20: SUB c= multExpr[$scope]
					{
					match(input,SUB,FOLLOW_SUB_in_arith_expression461); if (state.failed) return value;
					pushFollow(FOLLOW_multExpr_in_arith_expression467);
					c=multExpr(scope);
					state._fsp--;
					if (state.failed) return value;
					if ( state.backtracking==0 ) {value = value-c;}
					}
					break;

				default :
					break loop6;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return value;
	}
	// $ANTLR end "arith_expression"



	// $ANTLR start "multExpr"
	// myInterp.g:68:1: multExpr[int scope] returns [int value] : a= signExpr[$scope] ( MUL_POINTER b= signExpr[$scope] | DIV c= signExpr[$scope] | MOD d= signExpr[$scope] )* ;
	public final int multExpr(int scope) throws RecognitionException {
		int value = 0;


		int a =0;
		int b =0;
		int c =0;
		int d =0;

		try {
			// myInterp.g:68:40: (a= signExpr[$scope] ( MUL_POINTER b= signExpr[$scope] | DIV c= signExpr[$scope] | MOD d= signExpr[$scope] )* )
			// myInterp.g:68:42: a= signExpr[$scope] ( MUL_POINTER b= signExpr[$scope] | DIV c= signExpr[$scope] | MOD d= signExpr[$scope] )*
			{
			pushFollow(FOLLOW_signExpr_in_multExpr511);
			a=signExpr(scope);
			state._fsp--;
			if (state.failed) return value;
			if ( state.backtracking==0 ) {value = a;}
			// myInterp.g:69:11: ( MUL_POINTER b= signExpr[$scope] | DIV c= signExpr[$scope] | MOD d= signExpr[$scope] )*
			loop7:
			while (true) {
				int alt7=4;
				switch ( input.LA(1) ) {
				case MUL_POINTER:
					{
					alt7=1;
					}
					break;
				case DIV:
					{
					alt7=2;
					}
					break;
				case MOD:
					{
					alt7=3;
					}
					break;
				}
				switch (alt7) {
				case 1 :
					// myInterp.g:69:13: MUL_POINTER b= signExpr[$scope]
					{
					match(input,MUL_POINTER,FOLLOW_MUL_POINTER_in_multExpr528); if (state.failed) return value;
					pushFollow(FOLLOW_signExpr_in_multExpr534);
					b=signExpr(scope);
					state._fsp--;
					if (state.failed) return value;
					if ( state.backtracking==0 ) {value = value*b;}
					}
					break;
				case 2 :
					// myInterp.g:70:13: DIV c= signExpr[$scope]
					{
					match(input,DIV,FOLLOW_DIV_in_multExpr552); if (state.failed) return value;
					pushFollow(FOLLOW_signExpr_in_multExpr558);
					c=signExpr(scope);
					state._fsp--;
					if (state.failed) return value;
					if ( state.backtracking==0 ) {value = value/c;}
					}
					break;
				case 3 :
					// myInterp.g:71:13: MOD d= signExpr[$scope]
					{
					match(input,MOD,FOLLOW_MOD_in_multExpr576); if (state.failed) return value;
					pushFollow(FOLLOW_signExpr_in_multExpr582);
					d=signExpr(scope);
					state._fsp--;
					if (state.failed) return value;
					if ( state.backtracking==0 ) {value = value%d;}
					}
					break;

				default :
					break loop7;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return value;
	}
	// $ANTLR end "multExpr"



	// $ANTLR start "signExpr"
	// myInterp.g:75:1: signExpr[int scope] returns [int value] : (a= primaryExpr[$scope] | '-' b= primaryExpr[$scope] );
	public final int signExpr(int scope) throws RecognitionException {
		int value = 0;


		int a =0;
		int b =0;

		try {
			// myInterp.g:75:40: (a= primaryExpr[$scope] | '-' b= primaryExpr[$scope] )
			int alt8=2;
			int LA8_0 = input.LA(1);
			if ( ((LA8_0 >= Char && LA8_0 <= DEC_NUM)||LA8_0==FLOAT_NUM||LA8_0==Identifier||LA8_0==LEFT_PARRENTHESE) ) {
				alt8=1;
			}
			else if ( (LA8_0==SUB) ) {
				alt8=2;
			}
